[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cmdy"
version = "0.4.3"
description = "Shell language to run command in python"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/cmdy"
repository = "https://github.com/pwwang/cmdy"

[tool.poetry.dependencies]
python = "^3.6"
modkit = "*"
python-simpleconf = "*"
varname = "*"
curio = "^1.2"
diot = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
